# starling

./: .gitignore  Cargo.toml  index.html
assets/bullets/: good.aseprite  good_light.aseprite
assets/debug/: background.aseprite
assets/enemies/: simp.aseprite
assets/lenny/: continue_light.aseprite  heart_light.aseprite
assets/shaders/: animation_mat.wgsl
assets/studio/: armadillo_games.aseprite
docs/: index.html  starling.js
playful_assets/starling/: scratch1.aseprite
safe_assets/bullets/: good_light.aseprite
safe_assets/debug/: background.aseprite
safe_assets/drag_markers/: bullet_resource.aseprite  fire_head.aseprite  resource_empty.aseprite
safe_assets/ghost/: fly_green.aseprite
safe_assets/lenny/: continue.aseprite  egg.aseprite  fly.aseprite  heart.aseprite  heart_explode.aseprite  skill_tree_button_background.aseprite
safe_assets/menu/: title_text.aseprite
safe_assets/tutorial/: target.aseprite  target_break.aseprite
src/: camera.rs  consts.rs  cutscene.rs  input.rs  macros.rs  main.rs  math.rs  roots.rs  settings.rs  state.rs
src/animation/: layering.rs  manager.rs  mat.rs  mesh.rs  mod.rs
src/bird/: damage.rs  drag_markers.rs  egg.rs  flight.rs  ghost.rs  health.rs  mod.rs  progress.rs  resource_markers.rs
src/convo/: components.rs  data.rs  mod.rs  operation.rs
src/debug/: commands.rs  dphysics.rs  fps.rs  help_text.rs  mod.rs  mouse_pos.rs  physics.rs
src/enemies/: mod.rs  simp.rs  spawner.rs  spew.rs
src/environment/: background.rs  go_next.rs  heart.rs  mod.rs  platforms.rs
src/menu/: mod.rs  studio.rs  title.rs
(+49 files in other folders)
