[package]
name = "starling"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.0"
bevy-inspector-egui = "0.25"
paste = "1.0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.113"
earcutr = "0.4.3"
rand = "0.8.5"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
